[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["Sergey M <tz4678@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
Flask = "^2.0.1"
Flask-APScheduler = "^1.12.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.1"
Flask-RESTful = "^0.3.9"
flask-marshmallow = "^0.14.0"
gunicorn = "^20.1.0"
marshmallow-sqlalchemy = "^0.26.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
